--- a/README.Rmd
+++ b/README.Rmd
@@ -39,7 +39,7 @@ This package assumes some familiarity with basic Wikidata concepts. For referenc
 
 At the most basic, you should know that every item in Wikidata has an id (it always starts with a Q, something like `Q123456`). Each item is described by properties (they always start with a P something like `P1234`). 
 
-So for example, if I am interested in the anthropologist Margert Mead, I will search her name on Wikidata and discover that she is [`Q180099`](https://www.wikidata.org/wiki/Q180099). She is described by many properties. For example, she is "an instance of" ([P31](https://www.wikidata.org/wiki/Property:P31)) "[Q5](https://www.wikidata.org/wiki/Q180099)", which means "human". Her "sex or gender" ([P21](https://www.wikidata.org/wiki/Property:P21)) is "[Q180099](https://www.wikidata.org/wiki/Q6581072)", which means, female. By "occupation" ([P106](https://www.wikidata.org/wiki/Property:P106)), she was "[Q36180](https://www.wikidata.org/wiki/Q36180)", "[Q4773904](https://www.wikidata.org/wiki/Q4773904)", and "[Q674426](https://www.wikidata.org/wiki/Q674426)", which means, a writer, an anthropologist, and a curator. And so forth.
+So for example, if I am interested in the anthropologist Margaret Mead, I will search her name on Wikidata and discover that she is [`Q180099`](https://www.wikidata.org/wiki/Q180099). She is described by many properties. For example, she is "an instance of" ([P31](https://www.wikidata.org/wiki/Property:P31)) "[Q5](https://www.wikidata.org/wiki/Q180099)", which means "human". Her "sex or gender" ([P21](https://www.wikidata.org/wiki/Property:P21)) is "[Q180099](https://www.wikidata.org/wiki/Q6581072)", which means, female. By "occupation" ([P106](https://www.wikidata.org/wiki/Property:P106)), she was "[Q36180](https://www.wikidata.org/wiki/Q36180)", "[Q4773904](https://www.wikidata.org/wiki/Q4773904)", and "[Q674426](https://www.wikidata.org/wiki/Q674426)", which means, a writer, an anthropologist, and a curator. And so forth.
 
 As you'll see, many queries return just another wikidata id, and if you want to know what that means, you'll need to ask for what that id stands for. 
 
@@ -52,19 +52,18 @@ library("tidywikidatar")
 tw_set_cache_folder(path = "~/R/tw_data/")
 ```
 
+This also means that you can re-run code when offline, as data are downloaded from Wikidata's server only at first run (that is, unless you set `cache = FALSE` or `overwrite_cache = TRUE` when calling the respective functions).
 
 ## Finding details about something
 
 Most `tidywikidatar` functions are built around the idea that you know what you are looking for, and just want to get what Wikidata knows about it, assuming the preferred choice would be among the top results. 
 
-Let's say I am interested in Margaret Mead, the famous pioneer anthropologist author of "Coming of Age in Samoa". 
+Let's take this again from the beginning. As I mentioned, I am interested in Margaret Mead, the famous pioneer anthropologist author of "Coming of Age in Samoa". This seems quite straightforward but there are actually a number of things that are returned by searching for "Margaret Mead" that are not the woman herself.
 
 ```{r}
 tw_search(search = "Margaret Mead")
-
 ```
 
-This seems quite straightforward but there are actually a number of things that are returned by searching for "Margaret Mead". 
 
 If I am running through a list of strings, and, for example, I am actually interested in the most famous person by that name, I can filter result by property, using the standard form. If, for example, I want only the first result that is associated with "an instance of" (P31) - "human" (Q5), I can run:
 
@@ -73,6 +72,8 @@ tw_search(search = "Margaret Mead") %>%
   tw_filter_first(p = "P31", q = "Q5")
 
 ```
+
+and, as expected, I get a single output: my beloved Margaret Mead.
 
 
 Where was she born? I can ask directly for P19, place of birth:
@@ -86,12 +87,12 @@ which, as expected, will give me another wikidata id. But what does, "Q1345" sta
 tw_get_label(id = "Q1345")
 ```
 
-Alright, I know Philadelphia, but if it was a smaller place, perhaps I'd need to ask in which country it is located. So I would ask for the correspondent property, P17.
+Alright, I know where Philadelphia, but if it was a smaller place, perhaps I'd need to ask in which country it is located. So I would ask for the correspondent property, P17.
 
 ```{r}
 tw_get_property(id = "Q1345", p = "P17")
 ```
-Oh, no, another Wikidata id!
+Oh, no, another Wikidata id! That's the way it works... let's ask for its label:
 
 ```{r}
 tw_get_label(id = "Q30")
@@ -112,9 +113,9 @@ tw_search(search = "Margaret Mead") %>% # search for Margeret Mead
 
 And here we are, we know in which country Margaret Mead was born. 
 
-This may seems complex, but can be actually quite useful to understand how Wikidata works. 
+The procedure above may seem a bit convoluted, but it is actually quite representative of how Wikidata stores information.  
 
-This functions can also be combined, for example, like this:
+As you would expect, such functions can also be combined, for example, like this:
 
 ```{r}
 get_bio <- function(id, language = "en") {
@@ -147,7 +148,7 @@ tw_search(search = "Margaret Mead") %>%
 
 ## Queries
 
-All of the above works similarly to how we often use websistes such as Wikipedia, or search engines. Wikidata, however, has powerful tools for complex queries. Think something like "give me all of these fields for all items that have this value for this property, but not that other value for that other property". 
+All of the above works similarly to how we often use websistes such as Wikipedia, or search engines: we search for something specific to find information about it. Wikidata, however, has powerful tools for complex queries. Think something like "give me all of these fields for all items that have this value for this property, but not that other value for that other property". 
 
 To achieve this, you can run queries, following [instructions on Wikidata.org](https://www.wikidata.org/wiki/Wikidata:SPARQL_query_service/queries/examples). From R, you would run those using `WikidataQueryServiceR::query_wikidata()`. This is powerful, but perhaps somewhat intimidating for those who are less familiar with database queries, SPARQL, and the likes. 
 
@@ -169,26 +170,46 @@ query_df <- tibble::tribble(~p, ~q,
 query_df
 ```
 
-You can then pass it to `tw_query()`, and get a nicely formatted dataframe with all female resistance fighters on Wikidata.
+You can then pass it to `tw_query()`, and get a nicely formatted dataframe with all women who are resistance fighters on Wikidata.
 
 ```{r}
 tw_query(query = query_df)
 ```
 
 
+Or perhaps, you are interested only in women who are resistance fighters who have "France" ([Q142](https://www.wikidata.org/wiki/Q142)) as "country of citizenship" ([P27](https://www.wikidata.org/wiki/Property:P27))? And perhaps you want the description in Italian, and if not available in French, and only then look for other fallback options?
 
-You can also ask other fields, beyond label and description using the field parameter of `tw_query()`. But for this readme, I'll keep things simple. Do you want more information about these results? You can still use the same commands used above, e.g.
+```{r include=FALSE, echo=FALSE}
+Sys.sleep(3)
+```
+
+
+```{r}
+tibble::tribble(~p, ~q, 
+                "P106", "Q1397808", # Occupation: resistance fighter
+                "P21", "Q6581072", # Sex or gender: female
+                "P27", "Q142")  %>% # Country of citizenship: France
+  tw_query(language = c("it", "fr"))
+
+```
+
+
+
+You can also ask other fields, beyond label and description, using the `field` parameter of `tw_query()`. But for this readme, I'll keep things simple. Do you want more information about these results without learning yet another set of Wikidata terminology? You can still use the same commands described above, e.g.
 
 
 ```{r}
 tibble::tribble(~p, ~q, 
                 "P106", "Q1397808",
-                "P21", "Q6581072"
+                "P21", "Q6581072",
+                "P27", "Q142"
 ) %>% 
   tw_query() %>% 
   dplyr::slice(1) %>% 
   get_bio()
 ```
+
+Keep in mind that Wikidata queries are not cached locally. 
 
 
 ## Copyright and credits
