--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,7 @@ knitr::opts_chunk$set(
 The goal of `tidywikidatar` is to facilitate interaction with Wikidata:
 
 - all responses are transformed into data frames or simple character vectors
-- by default, responses are cached locally in a sqlite database
+- it is easy to enable efficient caching in a local sqlite database
 
 If you want to benefit of the wealth of information stored by Wikidata, but you do not like SPARQL queries and nested lists, then you may find `tidywikidatar` useful. If you prefer working with nested lists and SPARQL queries, or if you plan to build more complex queries, then you should probably use [`WikidataR`](https://github.com/Ironholds/WikidataR), Wikimedia's own [`WikidataQueryServiceR`](https://github.com/wikimedia/WikidataQueryServiceR) (under the hood, `tidywikidatar` is largely based on those packages).
 
