introduce reference to CRAN in readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -29,7 +29,13 @@ If you want to benefit of the wealth of information stored by Wikidata, but you 
 
 ## Installation
 
-You can install `tidywikidatar` from [Github](https://github.com/EDJNet/tidywikidatar) with:
+You can install the released version of `tidywikidatar` from [CRAN](https://CRAN.R-project.org) with:
+
+``` r
+install.packages("tidywikidatar")
+```
+
+You can install the development version from [Github](https://github.com/EDJNet/tidywikidatar) with:
 
 ``` r
 # install.packages("remotes")
