--- a/README.Rmd
+++ b/README.Rmd
@@ -35,7 +35,7 @@ You can install the released version of `tidywikidatar` from [CRAN](https://CRAN
 install.packages("tidywikidatar")
 ```
 
-You can install the development version from [Github](https://github.com/EDJNet/tidywikidatar) with:
+For the latest fixes and improvements, you can install the development version from [Github](https://github.com/EDJNet/tidywikidatar) with:
 
 ``` r
 # install.packages("remotes")
