--- a/vignettes/caching.Rmd
+++ b/vignettes/caching.Rmd
@@ -27,6 +27,7 @@ There are mainly three types of data that are cached locally:
 - searches run with `tw_search()`
 - data about an item, typically retrieved with `tw_get()` or `tw_get_property()`
 - labels or description of properties, typically retrieved with `tw_get_property_label()` and `tw_get_property_description()`
+- qualifiers of properties, typically retrieved with `tw_get_qualifiers()`
 
 To reduce space used for local caching and speed up processing time, it is possible to store only labels and information available in a given language when relevant. 
 
